k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  namespace: default
  labels:
    app: webook-mysql
spec:
  selector:
    matchLabels:
      app: webook-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          resources:
            limits:
              cpu: "2"
              memory: "4Gi"
            requests:
              cpu: "1"
              memory: "2Gi"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
              name: webook-mysql
      restartPolicy: Always

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
