k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: ClusterIP
  selector:
    app: webook
  ports:
  - name: webook
    protocol: TCP
    port: 81
    targetPort: 8080
    # nodePort: 30003
